--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -512,20 +512,20 @@ questItems = 0
 
 ; Change false to true to enable this section. This section contains modifiers.
 ; Modifiers are increases and reduction in percent declared by 50, or -50.
-enabled = false
+enabled = true
 
 ; Each of these values increase or reduce the durability of the specific item type by %.
 ; The value 50 will increase the durability from 100 to 150. The value -50 will reduce the durability from 100 to 50.
-axes = 0
-pickaxes = 0
-hammer = 0
-cultivator = 0
-hoe = 0
+axes = 700
+pickaxes = 700
+hammer = 700
+cultivator = 700
+hoe = 700
 weapons = 0
 armor = 0
 bows = 0
 shields = 0
-torch = 0
+torch = 700
 
 [Armor]
 
