advanced build mode on

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -7,7 +7,7 @@ enabled = true
 mainMenuLogo = true
 
 ; Display the advertisement of our server hosting partner on the server browser menu
-serverBrowserAdvertisement = true
+serverBrowserAdvertisement = false
 
 ; Disables configuration file auto updates from GitHub, useful if GitHub is blocked on your network.
 disableConfigAutoUpdates = false
@@ -16,7 +16,7 @@ disableConfigAutoUpdates = false
 
 ; https://docs.unity3d.com/ScriptReference/KeyCode.html <- a list of keycodes
 ; Change false to true to enable this section, if you set this to false the mode will not be accessible.
-enabled = false
+enabled = true
 
 ; Enter the advanced building mode with this key when building
 enterAdvancedBuildingMode = F1
@@ -650,7 +650,7 @@ autoUnequipShield = false
 queueWeaponChanges = false
 
 ; If set to true, you will always skip the intro of the game.
-skipIntro = false
+skipIntro = true
 
 ; If set to false, disables the "I have arrived!" message on player spawn.
 iHaveArrivedOnSpawn = true
@@ -678,7 +678,7 @@ disableEncumbered = false
 autoPickUpWhenEncumbered = false
 
 ; Shortens the teleport time as much as much as possible
-disableEightSecondTeleport = false
+disableEightSecondTeleport = true
 
 [Server]
 
