--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -103,7 +103,7 @@ showDuration = false
 [Building]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Remove some of the Invalid placement messages, most notably provides the ability to place objects into other objects
 noInvalidPlacementRestriction = false
@@ -122,14 +122,14 @@ pieceComfortRadius = 10
 
 ; When destroying a building piece, setting this to true will ensure it always drops full resources.
 ; We recommend to enable this if you use this section.
-alwaysDropResources = false
+alwaysDropResources = true
 
 ; When destroying a building piece, setting this to true will ensure it always drops pieces that the devs have marked as "do not drop".
 ; We recommend to enable this if you use this section.
-alwaysDropExcludedResources = false
+alwaysDropExcludedResources = true
 
 ; Setting this to true will cause repairing with the hammer to repair in a radius instead of a single piece.
-enableAreaRepair = false
+enableAreaRepair = true
 
 ; Sets the area repair radius of enableAreaRepair. A value of 7.5 would mean your repair radius is 7.5 meters.
 ; Requires enableAreaRepair=true
@@ -358,7 +358,7 @@ allowAllOres = false
 [Game]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; The games damage multiplier per person nearby in difficultyScaleRange(m) radius.
 ; Default is 4% monster damage increase per player in radius.
@@ -386,7 +386,7 @@ disablePortals = false
 disableConsole = false
 
 ;If you set this to true, portal names will be displayed in big text in center of screen.
-bigPortalNames = false
+bigPortalNames = true
 
 ;Remove dense fog from the game.
 disableFog = false
