autostack and auto repair range

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -133,7 +133,7 @@ enableAreaRepair = true
 
 ; Sets the area repair radius of enableAreaRepair. A value of 7.5 would mean your repair radius is 7.5 meters.
 ; Requires enableAreaRepair=true
-areaRepairRadius = 7.5
+areaRepairRadius = 100
 
 [Camera]
 
@@ -1308,16 +1308,16 @@ projectileAccuracy = 0
 [AutoStack]
 
 ; Set to true to automatically perform the "Stack All" action on all chests in range.
-enabled = false
+enabled = true
 
 ; Defines the range to search chests for the "Stack All" action.
-autoStackAllRange = 10
+autoStackAllRange = 20
 
 ; This option prevents to "Stack All" into chests from warded areas if the player doesnt have access to it.
 autoStackAllIgnorePrivateAreaCheck = false
 
 ; Set to true to prevent equipable items to be stored automaticly.
-autoStackAllIgnoreEquipment = false
+autoStackAllIgnoreEquipment = true
 
 [Oven]
 
