QoL related to other things

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -485,16 +485,16 @@ proustitePowder = 0
 ; Change false to true to enable this section.
 ; Each value below (in percent) will modify the yield when "picking" items (default key E) such as berries and flowers.
 ; A value of 100 will double drops, 200 will triple and so on.
-enabled = false
+enabled = true
 
 ; All berries, all mushrooms, onions and carrots
-edibles = 0
+edibles = 400
 
 ; Barley, Flax, Dandelion, Thistle, Carrot Seeds, Turnip Seeds, Turnip, Onion Seeds
-flowersAndIngredients = 0
+flowersAndIngredients = 400
 
 ; Bone Fragments, Flint, Stone, Wood (branches on the ground)
-materials = 0
+materials = 400
 
 ; Amber, Amber Pearl, Coins, Ruby
 valuables = 0
@@ -592,10 +592,10 @@ exploreRadius = 300
 preventPlayerFromTurningOffPublicPosition = true
 
 ; This option automatically shares created pins with everyone playing on the server.
-shareAllPins = false
+shareAllPins = true
 
 ; Display carts and boats on the map
-displayCartsAndBoats = false
+displayCartsAndBoats = true
 
 [Player]
 
@@ -606,7 +606,7 @@ enabled = true
 baseMaximumWeight = 450
 
 ; Increase the buff you receive to your carry weight from Megingjord's girdle.
-baseMegingjordBuff = 150
+baseMegingjordBuff = 750
 
 ; Increase auto pickup range of all items.
 baseAutoPickUpRange = 4
@@ -647,7 +647,7 @@ autoEquipShield = false
 autoUnequipShield = false
 
 ; If set to true, weapon switches requested mid-attack will be carried out when the current attack is finished instead of being ignored.
-queueWeaponChanges = false
+queueWeaponChanges = true
 
 ; If set to true, you will always skip the intro of the game.
 skipIntro = true
@@ -738,7 +738,7 @@ swimStaminaDrain = 0
 
 ; Change false to true to enable this section. This section contains modifiers.
 ; Modifiers are increases and reduction in percent declared by 50, or -50.
-enabled = false
+enabled = true
 
 ; Each of these values change the respective tool in stamina usage by increases and reduction in percent declared by 50, or -50.
 axes = 0
@@ -751,7 +751,7 @@ polearms = 0
 spears = 0
 swords = 0
 unarmed = 0
-hammer = 0
+hammer = -99
 hoe = 0
 cultivator = 0
 fishing = 0
@@ -857,7 +857,7 @@ wagonExtraMassFromItems = 0
 enabled = false
 
 ; Player inventory number of rows (inventory is resized up to 6 rows, higher values will add a scrollbar). default 4, min 4, max 20
-playerInventoryRows = 4
+playerInventoryRows = 6
 
 ; Wood chest number of columns
 ; (default 5, 3 min, 8 max)
@@ -995,7 +995,7 @@ checkFromWorkbench = true
 ignorePrivateAreaCheck = false
 
 ; The range of the chest detection in meters.
-range = 20
+range = 50
 
 ; The interval in seconds that the feature scans your nearby chests.
 ; We recommend not going below 3 seconds.
@@ -1010,7 +1010,7 @@ allowCraftingFromShips = false
 [Windmill]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Maximum amount of barley in a windmill.
 maximumBarley = 50
@@ -1022,10 +1022,10 @@ productionSpeed = 10
 ignoreWindIntensity = false
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit = false
+autoDeposit = true
 
 ; The Windmill will pull barley from nearby chests to be automatically added to it when its empty.
-autoFuel = false
+autoFuel = true
 
 ; This option prevents the Windmill to pull items from warded areas if it isn't placed inside of it.
 ; For convenience, we recommend this to be set to true.
@@ -1164,10 +1164,10 @@ textTransparencyChannel = 255
 [Brightness]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Changes how bright it looks at night. A value between 5 and 10 will result in nearly double in brightness at night.
-nightBrightnessMultiplier = 0
+nightBrightnessMultiplier = 5
 
 [Chat]
 
