--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -854,7 +854,7 @@ wagonExtraMassFromItems = 0
 [Inventory]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Player inventory number of rows (inventory is resized up to 6 rows, higher values will add a scrollbar). default 4, min 4, max 20
 playerInventoryRows = 6
@@ -865,7 +865,7 @@ woodChestColumns = 5
 
 ; Wood chest number of rows (more than 4 rows will add a scrollbar).
 ; (default 2, min 2, 10 max)
-woodChestRows = 2
+woodChestRows = 3
 
 ; Personal chest number of columns.
 ; (default 3, 3 min, 8 max)
