--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -603,10 +603,10 @@ displayCartsAndBoats = true
 enabled = true
 
 ; The base amount of carry weight of your character.
-baseMaximumWeight = 450
+baseMaximumWeight = 1200
 
 ; Increase the buff you receive to your carry weight from Megingjord's girdle.
-baseMegingjordBuff = 750
+baseMegingjordBuff = 300
 
 ; Increase auto pickup range of all items.
 baseAutoPickUpRange = 4
@@ -656,10 +656,10 @@ skipIntro = true
 iHaveArrivedOnSpawn = true
 
 ; If set to true, you will not put away / unequip your items when swimming.
-dontUnequipItemsWhenSwimming = false
+dontUnequipItemsWhenSwimming = true
 
 ; If set to true, items will be re-equipped when you exit water after swimming (if they were hidden automatically)
-reequipItemsAfterSwimming = false
+reequipItemsAfterSwimming = true
 
 ; This value represents how much the fall damage should be scaled in +/- %. This is a modifier value.
 ; The value 50 would result in 50% increased fall damage. The value -50 would result in 50% reduced fall damage.
@@ -752,8 +752,8 @@ spears = 0
 swords = 0
 unarmed = 0
 hammer = -99
-hoe = 0
-cultivator = 0
+hoe = -99
+cultivator = -99
 fishing = 0
 
 [EitrUsage]
@@ -823,7 +823,7 @@ wardEnemySpawnRange = 0
 [Workbench]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Set the workbench radius in meters.
 workbenchRange = 20
@@ -836,7 +836,7 @@ workbenchEnemySpawnRange = 0
 workbenchAttachmentRange = 5
 
 ; Disables the roof and exposure requirement to use a workbench.
-disableRoofCheck = false
+disableRoofCheck = true
 
 [Wagon]
 
@@ -1038,7 +1038,7 @@ autoRange = 10
 [SpinningWheel]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Maximum amount of flax in a spinning wheel.
 maximumFlax = 50
@@ -1047,10 +1047,10 @@ maximumFlax = 50
 productionSpeed = 30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit = false
+autoDeposit = true
 
 ; The Spinning Wheel will pull flax from nearby chests to be automatically added to it when its empty.
-autoFuel = false
+autoFuel = true
 
 ; This option prevents the Spinning Wheel to pull items from warded areas if it isn't placed inside of it.
 ; For convenience, we recommend this to be set to true.
@@ -1167,7 +1167,7 @@ textTransparencyChannel = 255
 enabled = true
 
 ; Changes how bright it looks at night. A value between 5 and 10 will result in nearly double in brightness at night.
-nightBrightnessMultiplier = 5
+nightBrightnessMultiplier = 6
 
 [Chat]
 
@@ -1244,10 +1244,10 @@ mistwalker = 5
 [HotTub]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; If set to true, the hot tub will stay at max fuel level, without consuming any fuel.
-infiniteFuel = false
+infiniteFuel = true
 
 ; The hot tub will fuel itself from nearby chests.
 autoFuel = false
@@ -1311,7 +1311,7 @@ projectileAccuracy = 0
 enabled = true
 
 ; Defines the range to search chests for the "Stack All" action.
-autoStackAllRange = 20
+autoStackAllRange = 4
 
 ; This option prevents to "Stack All" into chests from warded areas if the player doesnt have access to it.
 autoStackAllIgnorePrivateAreaCheck = false
