feat: update fog settings and resource limits in configuration

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -389,7 +389,7 @@ disableConsole = false
 bigPortalNames = true
 
 ;Remove dense fog from the game.
-disableFog = false
+disableFog = true
 
 [Hotkeys]
 
@@ -500,7 +500,7 @@ materials = 400
 valuables = 0
 
 ; Surtling Core only
-surtlingCores = 0
+surtlingCores = 200
 
 ; Black Core only
 blackCores = 0
@@ -549,7 +549,7 @@ enabled = true
 maximumWood = 25
 
 ; Change false to true to disable Fine Wood processing.
-dontProcessFineWood = false
+dontProcessFineWood = true
 
 ; Change false to true to disabled Round Log processing.
 dontProcessRoundLog = false
