feat: enable HUD and gathering sections, update bow ammo display and stamina usage for axes and blocking

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -429,7 +429,7 @@ itemsFloatInWater = false
 [Hud]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Shows the required amount of items AND the amount of items in your inventory in build mode and while crafting.
 ; This is enabled when the CraftFromChest section is enabled.
@@ -442,12 +442,12 @@ experienceGainedNotifications = false
 removeDamageFlash = false
 
 ; If bow is in hotbar, display current ammo & total ammo under hotbar icon - never (0), when equipped (1), or always (2).
-displayBowAmmoCounts = 0
+displayBowAmmoCounts = 2
 
 [Gathering]
 
 ; Change false to true to enable this section. This section contains modifiers. Modifiers are increases and reduction in percent declared by 50, or -50.
-enabled = false
+enabled = true
 
 ; Modify the chance to drop resources from resource nodes affected by this category. This only works on resource nodes that do not have guaranteed drops.
 ; As example by default scrap piles in dungeons have a 20% chance to drop a item, if you set this option to 200, you will then have a 60% chance to drop iron.
@@ -474,7 +474,7 @@ silverOre = 0
 chitin = 0
 
 ; feather will also affect the drops from shooting gulls/crows, as well as drops from trees.
-feather = 0
+feather = 1000
 
 ; Ashlands
 flametalOre = 0
@@ -741,8 +741,8 @@ swimStaminaDrain = 0
 enabled = true
 
 ; Each of these values change the respective tool in stamina usage by increases and reduction in percent declared by 50, or -50.
-axes = 0
-blocking = 0
+axes = -90
+blocking = -20
 bows = 0
 clubs = 0
 knives = 0
