feat: autostack, sap collector automation,. oven auto fuel, disable fog

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -389,7 +389,7 @@ disableConsole = false
 bigPortalNames = true
 
 ;Remove dense fog from the game.
-disableFog = true
+disableFog = false
 
 [Hotkeys]
 
@@ -474,7 +474,7 @@ silverOre = 0
 chitin = 0
 
 ; feather will also affect the drops from shooting gulls/crows, as well as drops from trees.
-feather = 1000
+feather = 500
 
 ; Ashlands
 flametalOre = 0
@@ -666,7 +666,7 @@ reequipItemsAfterSwimming = true
 fallDamageScalePercent = 0
 
 ; Max fall damage. Game default is 100 (so with enough health, falls can't kill).
-maxFallDamage = 100
+maxFallDamage = 20
 
 ; If set to true, all tutorials will skip from now on. You can turn this config off and reset the tutorial (in the settings) at any time.
 skipTutorials = false
@@ -746,7 +746,7 @@ blocking = -20
 bows = 0
 clubs = 0
 knives = 0
-pickaxes = 0
+pickaxes = -90
 polearms = 0
 spears = 0
 swords = 0
@@ -1311,7 +1311,7 @@ projectileAccuracy = 0
 enabled = true
 
 ; Defines the range to search chests for the "Stack All" action.
-autoStackAllRange = 4
+autoStackAllRange = 10
 
 ; This option prevents to "Stack All" into chests from warded areas if the player doesnt have access to it.
 autoStackAllIgnorePrivateAreaCheck = false
@@ -1322,10 +1322,10 @@ autoStackAllIgnoreEquipment = true
 [Oven]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; If set to true, the oven will stay at max fuel level, without consuming any fuel.
-infiniteFuel = false
+infiniteFuel = true
 
 ; The oven will fuel itself from nearby chests.
 autoFuel = false
@@ -1341,16 +1341,16 @@ autoRange = 10
 [SapCollector]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Configure the speed at which the collector produces sap in seconds, 75 seconds is 1 in-game hour.
 sapProductionSpeed = 60
 
 ; Configure the maximum amount of sap per collector
-maximumSapPerCollector = 10
+maximumSapPerCollector = 20
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit = false
+autoDeposit = true
 
 ; The range of the chest detection for the auto deposit feature.
 ; Maximum is 50
