etir refinery automation

--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -1063,7 +1063,7 @@ autoRange = 10
 [EitrRefinery]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Maximum amount of sap in an Eitr Refinery.
 maximumSap = 20
