--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -406,10 +406,10 @@ rollBackwards = F10
 [Items]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Enables you to teleport with ores and other usually teleport restricted objects.
-noTeleportPrevention = false
+noTeleportPrevention = true
 
 ; Increase or reduce item weight by a modifier in percent.
 ; The value -50 will reduce item weight of every object by 50%, 50 will increase the weight of every item by 50%.
