--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -389,7 +389,7 @@ disableConsole = false
 bigPortalNames = true
 
 ;Remove dense fog from the game.
-disableFog = false
+disableFog = true
 
 [Hotkeys]
 
