--- a/valheim_plug.cfg
+++ b/valheim_plug.cfg
@@ -1282,28 +1282,28 @@ autoRange = 10
 [Turret]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Change false to true to make the balista ignore players.
-ignorePlayers = false
+ignorePlayers = true
 
 ; Change false to true to prevent consumption of Balista ammo.
-unlimitedAmmo = false
+unlimitedAmmo = true
 
 ; This value determines the rate at which the balista turns. A multiplier of -50 will result in the balista turning 50% faster.
-turnRate = 0
+turnRate = -100
 
 ; This value determines the rate of fire of the balista. A multiplier of -50 will result in the balista shooting 100% faster.
-attackCooldown = 0
+attackCooldown = -100
 
 ; This value determines the distance a balista can see targets. A multiplier of 50 will result in the balista seeing 50% further.
-viewDistance = 0
+viewDistance = 50
 
 ; This value determines the velocity of the projectiles a ballista fires. A multiplier of 50 will result in the projectile velocity being 50% faster.
-projectileVelocity = 0
+projectileVelocity = 50
 
 ; This value determines the accuracy of the projectiles a ballista fires. A multiplier of 50 will result in the projectile being 50% more accurate.
-projectileAccuracy = 0
+projectileAccuracwy = 100
 
 [AutoStack]
 
